--- a/desktop-tool/src/main/resources/title_zh_CN.properties
+++ b/desktop-tool/src/main/resources/title_zh_CN.properties
@@ -5,6 +5,8 @@ ui.setting.title=\u8BBE\u7F6E
 ui.confirm.tip=\u63D0\u793A
 ui.mainwindow.exitconfirm=\u786E\u8BA4\u9000\u51FA\uFF1F
 
+ui.confirm.login=\u767B\u5F55
+
 ui.status.title=\u68C0\u6D4B
 ui.history.title=\u5386\u53F2
 ui.status.progress.current=\u68C0\u6D4B\u8FDB\u5EA6\uFF1A
